# forc_assignment_4

./: CMakeLists.txt  README.txt  copy_skel.sh  gofuckyourself.txt  main.cpp  roster_backup.txt
Classes/: Being.cpp  Being.h  CharacterCreator.cpp  CharacterCreator.h  Creature.cpp  IndividualCreator.cpp  IndividualCreator.h  InputHandler.cpp  InputHandler.h  Person.cpp  Person.h  TemplateCreator.cpp  TemplateCreator.h
Helpers/: DataHandler.cpp  DataHandler.h  Database.cpp  Database.h  FileHandler.cpp  FileHandler.h  HelperFunctions.cpp  HelperFunctions.h  InputHandler.cpp  InputHandler.h
Models/: Being.cpp  Being.h  Creature.cpp  Creature.h  EldritchHorror.cpp  EldritchHorror.h  Investigator.cpp  Investigator.h  Person.cpp  Person.h
Resources/: data.txt  template_file.txt
Saves/: newestRosterWolfo.txt
Saves/backups/: roster_backup.txt
Templates/: BaseTemplate.cpp  BaseTemplate.h  Being.cpp  Role.cpp  Role.h  Species.cpp  Species.h
