cmake_minimum_required(VERSION 3.17)
project(FORC_PA_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(FORC_PA_4 main.cpp Classes/Being.cpp Classes/Being.h Classes/Creature.cpp Classes/Creature.h Classes/Person.cpp Classes/Person.h Classes/Investigator.cpp Classes/Investigator.h Classes/EldritchHorror.cpp Classes/EldritchHorror.h Classes/CharacterCreator.cpp Classes/CharacterCreator.h Classes/InputHandler.cpp Classes/InputHandler.h)